package hslu.oop.sw04;

public enum State {
    ON, OFF
}
